Added query endpoints to other routes. Updated API documentation
